evidence/05-networkpolicies/final-networkpolicies-with-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-allow-ingress-and-monitoring
  namespace: lab4
spec:
  podSelector:
    matchLabels:
      app: gateway
  policyTypes:
    - Ingress
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkout-ingress-from-gateway-and-prometheus
  namespace: lab4
spec:
  podSelector:
    matchLabels:
      app: checkout-fn
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway
      ports:
        - protocol: TCP
          port: 3003
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3003
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pricing-ingress-from-checkout-and-prometheus
  namespace: lab4
spec:
  podSelector:
    matchLabels:
      app: pricing-fn
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkout-fn
      ports:
        - protocol: TCP
          port: 3001
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3001
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inventory-ingress-from-checkout-and-prometheus
  namespace: lab4
spec:
  podSelector:
    matchLabels:
      app: inventory-fn
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkout-fn
      ports:
        - protocol: TCP
          port: 3002
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3002
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress-from-checkout
  namespace: lab4
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkout-fn
      ports:
        - protocol: TCP
          port: 5432
